# Python-UseFul

./: .gitignore  CONTRIBUTING.md  Decorators_Utils.py  FileOperation_Utils.py  Player.db  README.md  gfg.html  main_test.py  requirements.txt  temp.txt
Anaconda_cmd/: README.md  download.py  requirements.txt
Bokeh_Utils/: 01_introduction.ipynb  02_installation_and_setup.ipynb  03_basic_concepts.ipynb  04_basic_plots.ipynb  05_styling.ipynb  06_data_sources.ipynb  07_annotations.ipynb  08_plot_tools.ipynb  09_more_plot_types.ipynb  10_layouts.ipynb  11_widgets_interactivity.ipynb  12_demo_dashboard.ipynb  13_exporting_embedding.ipynb  14_next_steps.ipynb  bokeh_main.py
DeepLearning/: README.md
Flask/: Client_Test.py  Flask_Server.py  Flask_Utils.py  README.md  Select_db.py  run.py  test_db.db
Git_cmd/: README.md
Py_Design_Pattern/: BridgeDesign_Pattern.py  Builder_Pattern.py  Catolog.py  Chain_of_responsbility_Pattern.py  Denpendence_injection.py  Flyweight_Pattern.py  LazyEvaluation_Pattern.py  Observer_Patten.py  Proxy_Pattern.py  PubSub_Pattern.py  README.md  Singleten.py
Python_package/: README.md  pyproject.toml  test_myutils.py
Python_package/myutils/: __init__.py  file_tools.py  math_tools.py  string_tools.py
Steamlit_Util/: Readme.md  Work_Manager_System.py  app.py
UV_Utils/: README.md
Utils/: Argparse_Utils.py  Asyncio_Utils.py  Blinker_Utils.py  Config_Utils.py  DataStructue_Utils.py  Decorators_Utils.py  FileOperation_Utils.py  Image_Utils.py  Json_Utils.py  Log_Utils.py  MutipleThread_Utils.py  Re_Utils.py  Readme.md  Sqlalchemy_Utils.py  (+6 more)
(+21 files in other folders)
